added instructione in readme.md